--- a/Desktop_app/meat_curing_UI.ui
+++ b/Desktop_app/meat_curing_UI.ui
@@ -9,8 +9,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>733</width>
-    <height>386</height>
+    <width>780</width>
+    <height>406</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -126,10 +126,10 @@
      <enum>QLCDNumber::Flat</enum>
     </property>
     <property name="value" stdset="0">
-     <double>19.000000000000000</double>
+     <double>0.000000000000000</double>
     </property>
     <property name="intValue" stdset="0">
-     <number>19</number>
+     <number>0</number>
     </property>
    </widget>
    <widget class="QLCDNumber" name="lcdNumberCurHum">
@@ -515,7 +515,7 @@
      <rect>
       <x>510</x>
       <y>10</y>
-      <width>181</width>
+      <width>241</width>
       <height>161</height>
      </rect>
     </property>
@@ -632,7 +632,7 @@
     <widget class="QLabel" name="labellabelFreezerStatusValue">
      <property name="geometry">
       <rect>
-       <x>90</x>
+       <x>140</x>
        <y>20</y>
        <width>47</width>
        <height>13</height>
@@ -645,7 +645,7 @@
     <widget class="QLabel" name="labelHumidifierStatusValue">
      <property name="geometry">
       <rect>
-       <x>90</x>
+       <x>140</x>
        <y>37</y>
        <width>47</width>
        <height>13</height>
@@ -658,7 +658,7 @@
     <widget class="QLabel" name="labelDehumidifierStatusValue">
      <property name="geometry">
       <rect>
-       <x>91</x>
+       <x>140</x>
        <y>54</y>
        <width>47</width>
        <height>13</height>
@@ -671,7 +671,7 @@
     <widget class="QLabel" name="labelHeaterSatusValue">
      <property name="geometry">
       <rect>
-       <x>91</x>
+       <x>140</x>
        <y>71</y>
        <width>47</width>
        <height>13</height>
@@ -684,7 +684,7 @@
     <widget class="QLabel" name="labelFreshAirFanStatusValue">
      <property name="geometry">
       <rect>
-       <x>89</x>
+       <x>140</x>
        <y>104</y>
        <width>47</width>
        <height>13</height>
@@ -697,7 +697,7 @@
     <widget class="QLabel" name="labelDevice7StatusValue">
      <property name="geometry">
       <rect>
-       <x>89</x>
+       <x>140</x>
        <y>120</y>
        <width>47</width>
        <height>13</height>
@@ -710,7 +710,7 @@
     <widget class="QLabel" name="labelDevice8StatusValue">
      <property name="geometry">
       <rect>
-       <x>87</x>
+       <x>140</x>
        <y>135</y>
        <width>47</width>
        <height>13</height>
@@ -723,7 +723,7 @@
     <widget class="QLabel" name="labelInternalFanStatusValue">
      <property name="geometry">
       <rect>
-       <x>90</x>
+       <x>140</x>
        <y>87</y>
        <width>47</width>
        <height>13</height>
@@ -744,7 +744,7 @@
      </rect>
     </property>
     <property name="title">
-     <string>GroupBox</string>
+     <string>MQTT Setup</string>
     </property>
    </widget>
    <widget class="QTextBrowser" name="textBrowserDeviceStatus">
@@ -752,8 +752,8 @@
      <rect>
       <x>510</x>
       <y>180</y>
-      <width>181</width>
-      <height>151</height>
+      <width>241</width>
+      <height>161</height>
      </rect>
     </property>
     <property name="html">
@@ -801,7 +801,7 @@ p, li { white-space: pre-wrap; }
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>733</width>
+     <width>780</width>
      <height>21</height>
     </rect>
    </property>
