--- a/Desktop_app/meat_curing_UI.ui
+++ b/Desktop_app/meat_curing_UI.ui
@@ -516,7 +516,7 @@
       <x>510</x>
       <y>10</y>
       <width>241</width>
-      <height>161</height>
+      <height>151</height>
      </rect>
     </property>
     <property name="title">
@@ -529,7 +529,7 @@
      <property name="geometry">
       <rect>
        <x>10</x>
-       <y>20</y>
+       <y>15</y>
        <width>47</width>
        <height>13</height>
       </rect>
@@ -542,7 +542,7 @@
      <property name="geometry">
       <rect>
        <x>10</x>
-       <y>35</y>
+       <y>30</y>
        <width>51</width>
        <height>16</height>
       </rect>
@@ -555,7 +555,7 @@
      <property name="geometry">
       <rect>
        <x>11</x>
-       <y>52</y>
+       <y>47</y>
        <width>61</width>
        <height>16</height>
       </rect>
@@ -568,7 +568,7 @@
      <property name="geometry">
       <rect>
        <x>11</x>
-       <y>83</y>
+       <y>78</y>
        <width>71</width>
        <height>16</height>
       </rect>
@@ -581,7 +581,7 @@
      <property name="geometry">
       <rect>
        <x>11</x>
-       <y>101</y>
+       <y>96</y>
        <width>71</width>
        <height>16</height>
       </rect>
@@ -594,7 +594,7 @@
      <property name="geometry">
       <rect>
        <x>11</x>
-       <y>70</y>
+       <y>65</y>
        <width>47</width>
        <height>13</height>
       </rect>
@@ -607,7 +607,7 @@
      <property name="geometry">
       <rect>
        <x>10</x>
-       <y>118</y>
+       <y>113</y>
        <width>71</width>
        <height>16</height>
       </rect>
@@ -620,7 +620,7 @@
      <property name="geometry">
       <rect>
        <x>10</x>
-       <y>133</y>
+       <y>128</y>
        <width>71</width>
        <height>16</height>
       </rect>
@@ -633,7 +633,7 @@
      <property name="geometry">
       <rect>
        <x>140</x>
-       <y>20</y>
+       <y>15</y>
        <width>47</width>
        <height>13</height>
       </rect>
@@ -646,7 +646,7 @@
      <property name="geometry">
       <rect>
        <x>140</x>
-       <y>37</y>
+       <y>32</y>
        <width>47</width>
        <height>13</height>
       </rect>
@@ -659,7 +659,7 @@
      <property name="geometry">
       <rect>
        <x>140</x>
-       <y>54</y>
+       <y>49</y>
        <width>47</width>
        <height>13</height>
       </rect>
@@ -672,7 +672,7 @@
      <property name="geometry">
       <rect>
        <x>140</x>
-       <y>71</y>
+       <y>66</y>
        <width>47</width>
        <height>13</height>
       </rect>
@@ -685,7 +685,7 @@
      <property name="geometry">
       <rect>
        <x>140</x>
-       <y>104</y>
+       <y>99</y>
        <width>47</width>
        <height>13</height>
       </rect>
@@ -698,7 +698,7 @@
      <property name="geometry">
       <rect>
        <x>140</x>
-       <y>120</y>
+       <y>115</y>
        <width>47</width>
        <height>13</height>
       </rect>
@@ -711,7 +711,7 @@
      <property name="geometry">
       <rect>
        <x>140</x>
-       <y>135</y>
+       <y>130</y>
        <width>47</width>
        <height>13</height>
       </rect>
@@ -724,7 +724,7 @@
      <property name="geometry">
       <rect>
        <x>140</x>
-       <y>87</y>
+       <y>82</y>
        <width>47</width>
        <height>13</height>
       </rect>
@@ -751,9 +751,9 @@
     <property name="geometry">
      <rect>
       <x>510</x>
-      <y>180</y>
+      <y>230</y>
       <width>241</width>
-      <height>161</height>
+      <height>111</height>
      </rect>
     </property>
     <property name="html">
@@ -763,6 +763,45 @@ p, li { white-space: pre-wrap; }
 &lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'MS Shell Dlg 2'; font-size:8.25pt; font-weight:400; font-style:normal;&quot;&gt;
 &lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;br /&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
     </property>
+   </widget>
+   <widget class="QGroupBox" name="groupBoxOperationMode">
+    <property name="geometry">
+     <rect>
+      <x>510</x>
+      <y>170</y>
+      <width>241</width>
+      <height>51</height>
+     </rect>
+    </property>
+    <property name="title">
+     <string>Operation Mode</string>
+    </property>
+    <widget class="QRadioButton" name="radioButtonHeatingMode">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>20</y>
+       <width>82</width>
+       <height>17</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Heating</string>
+     </property>
+    </widget>
+    <widget class="QRadioButton" name="radioButtonCoolingMode">
+     <property name="geometry">
+      <rect>
+       <x>120</x>
+       <y>20</y>
+       <width>82</width>
+       <height>17</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Cooling</string>
+     </property>
+    </widget>
    </widget>
    <zorder>groupBox</zorder>
    <zorder>groupBoxDeviceControl</zorder>
@@ -795,6 +834,7 @@ p, li { white-space: pre-wrap; }
    <zorder>pushButtonConnectBroker</zorder>
    <zorder>groupBoxDeviceStatus</zorder>
    <zorder>textBrowserDeviceStatus</zorder>
+   <zorder>groupBoxOperationMode</zorder>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
@@ -809,6 +849,7 @@ p, li { white-space: pre-wrap; }
     <property name="title">
      <string>File</string>
     </property>
+    <addaction name="actionData_Logging"/>
     <addaction name="actionQuit"/>
    </widget>
    <widget class="QMenu" name="menuHelp">
@@ -834,6 +875,11 @@ p, li { white-space: pre-wrap; }
   <action name="actionQuit">
    <property name="text">
     <string>Quit</string>
+   </property>
+  </action>
+  <action name="actionData_Logging">
+   <property name="text">
+    <string>Data Logging</string>
    </property>
   </action>
  </widget>
